
-------------------------------------------------------------------------------

Fri Nov 19 12:35:48 PST 1999
(KainX)

Okay, all the conditional build stuff should be fixed up now.  I'll need some
SGI people to test this as well as Solaris people, since it's entirely
possible I borked them both. :-)

-------------------------------------------------------------------------------

Fri Nov 19 17:49:09 PST 1999
(KainX)

Fixes and cleanups to E-NetGraph.  It now does config files properly and
includes all the options in them.

-------------------------------------------------------------------------------

Sat Nov 20 19:55:22 GMT 1999
(gilbertt)

Changed the Makefile.am to put epplet images in $EROOT/epplet_data.

I wanted to have epplet subdirs under this directory, but it really
complicated the Makefile, so I left it for now. It was easy for me the make
the changes with sed this way too ;)

Any stuff your app needs to install should go in epplet_data, preferably
with the filename prefixed with the name of your epplet.

-------------------------------------------------------------------------------

Sat Nov 20 16:17:49 EST 1999
(StriderZ)

Update debian/rules to put stuff in epplet_data.

-------------------------------------------------------------------------------

Sat Nov 20 16:30:02 EST 1999
(StriderZ

Adding E-MoonClock by mazeone.

-------------------------------------------------------------------------------

Sat Nov 20 21:56:32 GMT 1999
(gilbertt)

Fixed some warnings in Moon.c, changed <epplet.h> to "epplet.h" in
E-MoonClock.c, fixed problem with blank_epplet in my cloak stuff.
Can't remember what else.

-------------------------------------------------------------------------------

Sat Nov 20 18:00:11 EST 1999
(StriderZ)

Added a popup command history to E-Exec and made it wider.

-------------------------------------------------------------------------------

Sat Nov 21 12:28:37 GMT 1999
(gilbertt)

epplet.h wasn't getting installed.

(wtf?)
