@@ -734,3 +734,10 @@ epplet.h wasn't getting installed.
 
 (wtf?)
 
+-------------------------------------------------------------------------------
+
+Sun Nov 21 22:15:01 EST 1999
+(StriderZ)
+
+Added a button to E-Slides to set E's bg.
+
